--- a/ui/v3ext.ui
+++ b/ui/v3ext.ui
@@ -74,14 +74,14 @@
         <number>6</number>
        </property>
        <item>
-        <widget class="QPushButton" name="buttonAdd" >
+        <widget class="QPushButton" name="addEntry" >
          <property name="text" >
           <string>Add</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="buttonDelete" >
+        <widget class="QPushButton" name="delEntry" >
          <property name="text" >
           <string>Delete</string>
          </property>
@@ -113,14 +113,14 @@
       <number>6</number>
      </property>
      <item>
-      <widget class="QPushButton" name="PushButton3" >
+      <widget class="QPushButton" name="apply" >
        <property name="text" >
         <string>Apply</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="PushButton5" >
+      <widget class="QPushButton" name="validate" >
        <property name="text" >
         <string>Validate</string>
        </property>
@@ -143,7 +143,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="PushButton4" >
+      <widget class="QPushButton" name="cancel" >
        <property name="sizePolicy" >
         <sizepolicy>
          <hsizetype>1</hsizetype>
@@ -160,8 +160,17 @@
     </layout>
    </item>
   </layout>
-  <widget class="QWidget" name="" />
-  <widget class="QWidget" name="" >
+  <widget class="QWidget" name="widget" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>100</width>
+     <height>30</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QWidget" name="widget_2" >
    <property name="geometry" >
     <rect>
      <x>9</x>
@@ -171,7 +180,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="" >
+  <widget class="QWidget" name="widget_3" >
    <property name="geometry" >
     <rect>
      <x>360</x>
@@ -186,39 +195,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>buttonAdd</sender>
-   <signal>clicked()</signal>
-   <receiver>v3ext</receiver>
-   <slot>addEntry()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>355</x>
-     <y>35</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>157</x>
-     <y>90</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonDelete</sender>
-   <signal>clicked()</signal>
-   <receiver>v3ext</receiver>
-   <slot>delEntry()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>413</x>
-     <y>38</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>193</x>
-     <y>144</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>PushButton4</sender>
+   <sender>cancel</sender>
    <signal>clicked()</signal>
    <receiver>v3ext</receiver>
    <slot>reject()</slot>
@@ -230,38 +207,6 @@
     <hint type="destinationlabel" >
      <x>227</x>
      <y>150</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>PushButton3</sender>
-   <signal>clicked()</signal>
-   <receiver>v3ext</receiver>
-   <slot>apply()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>30</x>
-     <y>161</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>4</x>
-     <y>151</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>PushButton5</sender>
-   <signal>clicked()</signal>
-   <receiver>v3ext</receiver>
-   <slot>validate()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>122</x>
-     <y>187</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>136</x>
-     <y>152</y>
     </hint>
    </hints>
   </connection>
