--- a/ui/ExportCert.ui
+++ b/ui/ExportCert.ui
@@ -117,7 +117,7 @@
        <number>6</number>
       </property>
       <item row="1" column="3" >
-       <widget class="QToolButton" name="ToolButton1" >
+       <widget class="QToolButton" name="fileBut" >
         <property name="sizePolicy" >
          <sizepolicy>
           <hsizetype>0</hsizetype>
@@ -165,7 +165,7 @@
        </widget>
       </item>
       <item row="0" column="2" colspan="2" >
-       <widget class="QPushButton" name="PushButton3" >
+       <widget class="QPushButton" name="tinyCaName" >
         <property name="sizePolicy" >
          <sizepolicy>
           <hsizetype>1</hsizetype>
@@ -357,5 +357,38 @@
   <tabstop>PushButton9</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>PushButton9</sender>
+   <signal>clicked()</signal>
+   <receiver>ExportCert</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>71</x>
+     <y>311</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>180</x>
+     <y>291</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>PushButton7</sender>
+   <signal>clicked()</signal>
+   <receiver>ExportCert</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>468</x>
+     <y>295</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>304</x>
+     <y>287</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
