--- a/ui/CertDetail.ui
+++ b/ui/CertDetail.ui
@@ -669,7 +669,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="unnamed" >
+     <widget class="QWidget" name="unnamed_1" >
       <attribute name="title" >
        <string>&amp;Subject</string>
       </attribute>
@@ -701,7 +701,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="unnamed" >
+     <widget class="QWidget" name="unnamed_2" >
       <attribute name="title" >
        <string>&amp;Extensions</string>
       </attribute>
