--- a/ui/CrlDetail.ui
+++ b/ui/CrlDetail.ui
@@ -321,7 +321,38 @@
         <number>6</number>
        </property>
        <item>
-        <widget class="QTableWidget" name="certList" />
+        <widget class="QTreeWidget" name="certList" >
+         <property name="alternatingRowColors" >
+          <bool>true</bool>
+         </property>
+         <property name="selectionMode" >
+          <enum>QAbstractItemView::NoSelection</enum>
+         </property>
+         <property name="rootIsDecorated" >
+          <bool>false</bool>
+         </property>
+         <property name="uniformRowHeights" >
+          <bool>true</bool>
+         </property>
+         <property name="columnCount" >
+          <number>3</number>
+         </property>
+         <column>
+          <property name="text" >
+           <string>0</string>
+          </property>
+         </column>
+         <column>
+          <property name="text" >
+           <string>1</string>
+          </property>
+         </column>
+         <column>
+          <property name="text" >
+           <string>2</string>
+          </property>
+         </column>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -337,7 +368,14 @@
         <number>6</number>
        </property>
        <item>
-        <widget class="QTextEdit" name="v3extensions" />
+        <widget class="QTextEdit" name="v3extensions" >
+         <property name="acceptDrops" >
+          <bool>false</bool>
+         </property>
+         <property name="readOnly" >
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -398,7 +436,16 @@
     </layout>
    </item>
   </layout>
-  <widget class="QWidget" name="" />
+  <widget class="QWidget" name="widget" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>100</width>
+     <height>30</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <pixmapfunction></pixmapfunction>
  <customwidgets>
@@ -418,5 +465,22 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>but_ok</sender>
+   <signal>clicked()</signal>
+   <receiver>CrlDetail</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>367</x>
+     <y>452</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>520</x>
+     <y>428</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
